package com.obe.evaluation.system.entity;

import com.baomidou.mybatisplus.annotation.*;
import lombok.Data;
import java.time.LocalDateTime;

@Data @TableName("sys_user")
public class SysUser {
    @TableId(type = IdType.AUTO) private Long id;
    private String username; private String password; private String realName;
    private String email; private String phone; private String roleCode;
    private String gitUsername; private String gitEmail;
    private Integer status;
    @TableLogic(value = "0", delval = "1") private Integer deleted;
    private LocalDateTime createdAt; private LocalDateTime updatedAt;
}
